Working prototype, PCB prototype revision done

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRC_DIRS "src"
+                       REQUIRES  led_strip driver nvs_flash esp_http_server esp_wifi json
+                       INCLUDE_DIRS "inc"
+                       )
