--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -1,18 +1,21 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
-  "idf.espIdfPathWin": "c:\\Users\\zatlo\\OneDrive\\esp\\v5.4.2\\esp-idf",
-  "idf.pythonInstallPath": "C:\\Users\\zatlo\\.espressif\\tools\\idf-python\\3.11.2\\python.exe",
+  "idf.espIdfPathWin": "C:/Users/zatlo/OneDrive/esp/v5.5/",
+  "idf.pythonInstallPath": "C:\\Espressif\\tools\\idf-python\\3.11.2\\python.exe",
   "idf.openOcdConfigs": [
-    "board/esp32s3-builtin.cfg"
+    "interface/ftdi/esp_ftdi.cfg",
+    "target/esp32s3.cfg"
   ],
-  "idf.toolsPathWin": "C:\\Users\\zatlo\\.espressif",
+  "idf.toolsPathWin": "C:\\Espressif",
   "idf.customExtraVars": {
     "IDF_TARGET": "esp32s3"
   },
   "clangd.path": "C:\\Users\\zatlo\\.espressif\\tools\\esp-clang\\esp-18.1.2_20240912\\esp-clang\\bin\\clangd.exe",
   "clangd.arguments": [
     "--background-index",
-    "--query-driver=C:\\Users\\zatlo\\.espressif\\tools\\xtensa-esp-elf\\esp-14.2.0_20241119\\xtensa-esp-elf\\bin\\xtensa-esp32-elf-gcc.exe",
-    "--compile-commands-dir=${workspaceFolder}\\build"
-  ]
+    "--query-driver=**",
+    "--compile-commands-dir=c:\\Users\\zatlo\\OneDrive\\projects\\Embedded\\ESP32\\smart-home-hub\\firmware\\build"
+  ],
+  "idf.portWin": "COM4",
+  "idf.flashType": "UART"
 }
