added fx uri needs adjustments (but concept works)

--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -17,5 +17,5 @@
     "--compile-commands-dir=c:\\Users\\zatlo\\OneDrive\\projects\\Embedded\\ESP32\\smart-home-hub\\firmware\\build"
   ],
   "idf.portWin": "COM4",
-  "idf.flashType": "UART"
+  "idf.flashType": "JTAG"
 }
