original i2s config for reference

--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -16,6 +16,6 @@
     "--query-driver=**",
     "--compile-commands-dir=c:\\Users\\zatlo\\OneDrive\\projects\\Embedded\\ESP32\\smart-home-hub\\firmware\\build"
   ],
-  "idf.portWin": "COM4",
-  "idf.flashType": "JTAG"
+  "idf.portWin": "COM9",
+  "idf.flashType": "UART"
 }
