--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRC_DIRS "src"
-                       REQUIRES  led_strip driver nvs_flash esp_http_server esp_wifi json
+                       REQUIRES  led_strip driver nvs_flash esp_http_server esp_wifi json esp_http_client
                        INCLUDE_DIRS "inc"
                        )
