--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -3,12 +3,11 @@
   "idf.espIdfPathWin": "C:/Users/zatlo/OneDrive/esp/v5.5/",
   "idf.pythonInstallPath": "C:\\Espressif\\tools\\idf-python\\3.11.2\\python.exe",
   "idf.openOcdConfigs": [
-    "interface/ftdi/esp_ftdi.cfg",
-    "target/esp32s3.cfg"
+    "board/esp32-wrover-kit-3.3v.cfg"
   ],
   "idf.toolsPathWin": "C:\\Espressif",
   "idf.customExtraVars": {
-    "IDF_TARGET": "esp32s3"
+    "IDF_TARGET": "esp32"
   },
   "clangd.path": "C:\\Espressif\\tools\\esp-clang\\esp-19.1.2_20250312\\esp-clang\\bin\\clangd.exe",
   "clangd.arguments": [
@@ -16,6 +15,6 @@
     "--query-driver=**",
     "--compile-commands-dir=c:\\Users\\zatlo\\OneDrive\\projects\\Embedded\\ESP32\\smart-home-hub\\firmware\\build"
   ],
-  "idf.portWin": "COM9",
+  "idf.portWin": "COM12",
   "idf.flashType": "UART"
 }
